<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.QuizFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="184dp"
        android:layout_height="67dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231">

    </TextView>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="148dp"
        android:src="@drawable/ic_login"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

    </ImageView>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginTop="236dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/et_password"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        tools:ignore="MissingConstraints">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/et_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        tools:ignore="MissingConstraints">
    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.23">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>